--- a/Proyecto Final/scss/_footer.scss
+++ b/Proyecto Final/scss/_footer.scss
@@ -1,17 +1,20 @@
 $font:'Julius Sans One', sans-serif;
 
+@mixin font-and-color {
+    font-family: $font;
+    color: white;
+}
+
 footer{
     div{
         div{
             h4{
-                font-family: $font;
+                @include font-and-color;
                 font-size: 12px;   
-                color: white;
             }
             p{
-                font-family: $font;
+                @include font-and-color;
                 font-size: 13px;
-                color: white;
                 margin-bottom: 25px;
             }
         }
