--- a/Proyecto Final/css/styles.css
+++ b/Proyecto Final/css/styles.css
@@ -84,6 +84,106 @@ footer div div p {
   100% {
     opacity: 1; } }
 
+@media screen and (min-width: 300px) and (max-width: 375px) {
+  .contact-map-section .map-fincas {
+    max-width: 340px;
+    max-height: 350px; }
+  .contact-title {
+    font-size: 30px !important; }
+  .contact-description {
+    font-size: 15px !important;
+    margin-left: 10px; }
+  .contac-name {
+    margin-left: 10px;
+    width: 330px; }
+  .contact-email {
+    margin-left: 10px;
+    width: 330px; }
+  .contact-subject {
+    margin-left: 10px;
+    width: 330px; }
+  .contact-message {
+    margin-left: 10px;
+    width: 330px; }
+  .titulo-about-us {
+    font-size: 30px !important; }
+  .about-us-description-col {
+    margin-left: 10px !important;
+    margin-right: 10px !important;
+    font-size: 18px !important; } }
+
+@media only screen and (min-width: 376px) and (max-width: 390px) {
+  .contact-map-section .map-fincas {
+    max-width: 365px;
+    max-height: 400px; }
+  .contact-title {
+    font-size: 30px !important; }
+  .contact-description {
+    font-size: 15px !important;
+    margin-left: 10px; }
+  .titulo-about-us {
+    font-size: 30px !important; }
+  .about-us-description-col {
+    margin-left: 10px !important;
+    margin-right: 10px !important;
+    font-size: 18px !important; } }
+
+@media only screen and (min-width: 391px) and (max-width: 414px) {
+  .contact-map-section .map-fincas {
+    max-width: 387px;
+    max-height: 400px; }
+  .contact-title {
+    font-size: 30px !important; }
+  .contact-description {
+    font-size: 15px !important;
+    margin-left: 10px; }
+  .titulo-about-us {
+    font-size: 35px !important; }
+  .about-us-description-col {
+    margin-left: 10px !important;
+    margin-right: 10px !important;
+    font-size: 18px !important; } }
+
+@media only screen and (min-width: 415px) and (max-width: 820px) {
+  .contact-map-section .map-fincas {
+    margin-top: 5px;
+    max-width: 350px;
+    max-height: 400px; }
+  .contact-title {
+    font-size: 30px !important; }
+  .contact-description {
+    font-size: 15px !important;
+    margin-left: 10px; }
+  .titulo-about-us {
+    font-size: 30px; }
+  .about-us-description-col {
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 18px; } }
+
+@media only screen and (min-width: 821px) and (max-width: 912px) {
+  .contact-map-section .map-fincas {
+    margin-top: 5px;
+    max-width: 350px;
+    max-height: 400px; }
+  .contact-title {
+    font-size: 30px !important; }
+  .contact-description {
+    font-size: 15px !important;
+    margin-left: 10px; }
+  .titulo-about-us {
+    font-size: 30px; }
+  .about-us-description-col {
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 18px; } }
+
+@media screen and (min-width: 913px) {
+  .contact-map-section .map-fincas {
+    margin-top: 5px;
+    max-width: 450px;
+    max-height: 400px; } }
+
 /* Mapa de Fonts Sizes*/
 /* Mapa de Fonts*/
 /* Uso del Map Fonts*/
@@ -106,8 +206,18 @@ footer div div p {
 .size-21 {
   font-size: 21px; }
 
+.size-25 {
+  font-size: 25px; }
+
 .size-35 {
   font-size: 35px; }
 
 .size-48 {
   font-size: 48px; }
+
+.page-footer img {
+  margin-top: 1px; }
+
+.about-us-description-col {
+  margin-top: 50px;
+  padding-bottom: 90px; }
